--- a/frontend/src/layout/DashboardLayout/index.module.css
+++ b/frontend/src/layout/DashboardLayout/index.module.css
@@ -14,7 +14,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
-    align-items: start;
+    align-items: flex-start;
+    border-right: 2px solid rgb(222, 219, 219);
 }
 
 .sideBarOption{
@@ -35,4 +36,13 @@
 
 .sideBarOption > svg{
     height: 1.4em;
+}
+
+.homeContainer_extraContainer{
+    padding-left: 1rem;
+    border-left: 2px solid rgb(222, 219, 219);
+}
+
+.homeContainer_feedContainer{
+    padding-inline: 0.8rem;
 }
