--- a/frontend/src/pages/dashboard/index.module.css
+++ b/frontend/src/pages/dashboard/index.module.css
@@ -132,3 +132,41 @@
     position: relative;
     padding: 1.4rem;
 }
+
+.postCommentsContainer{
+    position: absolute;
+    bottom: 1.2rem;
+    left: 1.2rem;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.2rem;
+}
+
+.postCommentsContainer>input{
+    flex: 0.9;
+    width: fit-content;
+    padding-block: 1.2rem;
+    padding-inline: 1.5rem;
+    border: none;
+    background-color: rgb(160, 164, 164);
+    border-radius: 10px;
+    font-weight: 700;
+    outline: none;
+}
+
+.postCommentsContainer>input :focus{ 
+    border: 1px solid silver;
+}
+
+.postCommentsContainer_commentBtn{
+    flex: 0.1;
+    width: fit-content;
+    padding: 1.2rem;
+    cursor: pointer;
+    text-align: center;
+    color: white;
+    background-color: rgb(245, 205, 76);
+    border-radius: 10px;
+}
