--- a/frontend/src/Components/Navbar/styles.module.css
+++ b/frontend/src/Components/Navbar/styles.module.css
@@ -1,11 +1,17 @@
 .container {
     padding: 1.2rem;
+    
 }
 
 .navbar{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    /* z-index: 1000; */
+    border-radius: 10px;
+    /* background: rgb(11, 171, 252); IMPORTANT so content doesn’t show through */
 }
 .navBarOptionContainer{
     display: flex;
