--- a/frontend/src/pages/discover/index.module.css
+++ b/frontend/src/pages/discover/index.module.css
@@ -1,8 +1,8 @@
-/* .Discoverpage{
+.Discoverpage {
     display: flex;
     flex-direction: column;
     align-items: center;
-} */
+}
 
 
 .allUserProfile {
@@ -15,24 +15,30 @@
 }
 
 
-.userCard{
-    width: 100%;
+.userCard {
+    width: 40rem;
     display: flex;
     gap: 1.2rem;
     padding: 1.3rem;
     align-items: center;
-    border-bottom: 1px solid rgb(147, 145, 145);
-    /* border-radius: 10px; */
-    background-color: rgba(210, 207, 207, 0.786);
+    border-bottom: 1px solid rgb(72, 70, 70);
+    border-radius: 10px;
+    background-color: rgba(255, 252, 252, 0.786);
     box-shadow: 2px 5px 12px rgba(0, 0, 0, 0.406);
     cursor: pointer;
 }
 
 
-.userCard_img{
+.userCard_img {
     width: 70px;
     height: 70px;
     background-color: rgb(5, 93, 131);
     border-radius: 100%;
     border: 2px solid black;
+}
+
+@media only screen and (max-width: 600px) {
+    .userCard {
+        width: 100vw;
+    }
 }
